--- a/node/overlay/etc/auto.master
+++ b/node/overlay/etc/auto.master
@@ -1,4 +1,4 @@
-
+/mnt /etc/auto.vms --timeout=5 --ghost
 /home/accounts/personale program:/etc/auto.home_personale
 /home/accounts/studenti program:/etc/auto.home_studenti
 /home/accounts/esterni program:/etc/auto.home_esterni
